iglooportal/etc/iptables.rules
# Generated by iptables-save v1.4.12 on Tue Feb 18 11:19:35 2014
*raw
:PREROUTING ACCEPT [24741:3767093]
:OUTPUT ACCEPT [23960:5165848]
COMMIT
# Completed on Tue Feb 18 11:19:35 2014
# Generated by iptables-save v1.4.12 on Tue Feb 18 11:19:35 2014
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:drop - [0:0]
:faccept - [0:0]
:fdns - [0:0]
:fdrop - [0:0]
:ffwdrules - [0:0]
:fglobal - [0:0]
:fmodules - [0:0]
:fnoexternal - [0:0]
:fnospoof - [0:0]
:fnospoofmodules - [0:0]
:fredirects - [0:0]
:ftoexternalonly - [0:0]
:iaccept - [0:0]
:idrop - [0:0]
:iexternal - [0:0]
:iexternalmodules - [0:0]
:iglobal - [0:0]
:imodules - [0:0]
:inoexternal - [0:0]
:inointernal - [0:0]
:inospoof - [0:0]
:inospoofmodules - [0:0]
:log - [0:0]
:oaccept - [0:0]
:odrop - [0:0]
:oglobal - [0:0]
:ointernal - [0:0]
:omodules - [0:0]
:preforward - [0:0]
:preinput - [0:0]
:preoutput - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -j preinput
-A INPUT -m state --state INVALID -j idrop
-A INPUT -m state --state RELATED,ESTABLISHED -j iaccept
-A INPUT -j inospoof
-A INPUT -j iexternalmodules
-A INPUT -j iexternal
-A INPUT -j inoexternal
-A INPUT -j imodules
-A INPUT -j iglobal
-A INPUT -p icmp ! -f -m icmp --icmp-type 8 -m state --state NEW -j iaccept
-A INPUT -p icmp ! -f -m icmp --icmp-type 0 -m state --state NEW -j iaccept
-A INPUT -p icmp ! -f -m icmp --icmp-type 3 -m state --state NEW -j iaccept
-A INPUT -p icmp ! -f -m icmp --icmp-type 4 -m state --state NEW -j iaccept
-A INPUT -p icmp ! -f -m icmp --icmp-type 11 -m state --state NEW -j iaccept
-A INPUT -p icmp ! -f -m icmp --icmp-type 12 -m state --state NEW -j iaccept
-A INPUT -j idrop
-A FORWARD -j preforward
-A FORWARD -m state --state INVALID -j fdrop
-A FORWARD -m state --state RELATED,ESTABLISHED -j faccept
-A FORWARD -j fnospoof
-A FORWARD -j fredirects
-A FORWARD -j fmodules
-A FORWARD -j ffwdrules
-A FORWARD -j fnoexternal
-A FORWARD -j fdns
-A FORWARD -j fglobal
-A FORWARD -p icmp ! -f -m icmp --icmp-type 8 -m state --state NEW -j faccept
-A FORWARD -p icmp ! -f -m icmp --icmp-type 0 -m state --state NEW -j faccept
-A FORWARD -p icmp ! -f -m icmp --icmp-type 3 -m state --state NEW -j faccept
-A FORWARD -p icmp ! -f -m icmp --icmp-type 4 -m state --state NEW -j faccept
-A FORWARD -p icmp ! -f -m icmp --icmp-type 11 -m state --state NEW -j faccept
-A FORWARD -p icmp ! -f -m icmp --icmp-type 12 -m state --state NEW -j faccept
-A FORWARD -j fdrop
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j preoutput
-A OUTPUT -m state --state INVALID -j odrop
-A OUTPUT -m state --state RELATED,ESTABLISHED -j oaccept
-A OUTPUT -j ointernal
-A OUTPUT -j omodules
-A OUTPUT -j oglobal
-A OUTPUT -p icmp ! -f -m icmp --icmp-type 8 -m state --state NEW -j oaccept
-A OUTPUT -p icmp ! -f -m icmp --icmp-type 0 -m state --state NEW -j oaccept
-A OUTPUT -p icmp ! -f -m icmp --icmp-type 3 -m state --state NEW -j oaccept
-A OUTPUT -p icmp ! -f -m icmp --icmp-type 4 -m state --state NEW -j oaccept
-A OUTPUT -p icmp ! -f -m icmp --icmp-type 11 -m state --state NEW -j oaccept
-A OUTPUT -p icmp ! -f -m icmp --icmp-type 12 -m state --state NEW -j oaccept
-A OUTPUT -j odrop
-A drop -j DROP
-A faccept -j ACCEPT
-A fdns -d 192.168.200.12/32 -p udp -m state --state NEW -m udp --dport 53 -j faccept
-A fdns -d 192.168.200.12/32 -p tcp -m state --state NEW -m tcp --dport 53 -j faccept
-A fdns -d 192.168.200.3/32 -p udp -m state --state NEW -m udp --dport 53 -j faccept
-A fdns -d 192.168.200.3/32 -p tcp -m state --state NEW -m tcp --dport 53 -j faccept
-A fdns -d 168.95.192.1/32 -p udp -m state --state NEW -m udp --dport 53 -j faccept
-A fdns -d 168.95.192.1/32 -p tcp -m state --state NEW -m tcp --dport 53 -j faccept
-A fdrop -j drop
-A ffwdrules -i eth1 -j RETURN
-A fglobal -j faccept
-A fnoexternal -i eth0 -m state --state NEW -j fdrop
-A fnospoof -j fnospoofmodules
-A ftoexternalonly -o eth0 -j faccept
-A ftoexternalonly -j fdrop
-A iaccept -j ACCEPT
-A idrop -j drop
-A iexternal -i eth1 -j RETURN
-A iexternal -p icmp ! -f -m icmp --icmp-type 8 -m state --state NEW -j iaccept
-A iexternal -p icmp ! -f -m icmp --icmp-type 0 -m state --state NEW -j iaccept
-A iexternal -p icmp ! -f -m icmp --icmp-type 3 -m state --state NEW -j iaccept
-A iexternal -p icmp ! -f -m icmp --icmp-type 4 -m state --state NEW -j iaccept
-A iexternal -p icmp ! -f -m icmp --icmp-type 12 -m state --state NEW -j iaccept
-A iexternal -p udp -m udp --sport 4443:4444 --dport 4443:4444 -m state --state NEW -j iaccept
-A iexternal -p tcp -m tcp --sport 4443:4444 --dport 4443:4444 -m state --state NEW -j iaccept
-A iexternal -p tcp -m tcp --dport 22 -m state --state NEW -j iaccept
-A iexternal -p tcp -m tcp --dport 443 -m state --state NEW -j iaccept
-A iexternalmodules -i eth1 -j RETURN
-A iglobal -p tcp -m tcp --dport 80 -m state --state NEW -j iaccept
-A iglobal -m state --state NEW -j iaccept
-A iglobal -p udp -m udp --dport 8880 -m state --state NEW -j iaccept
-A iglobal -p tcp -m tcp --dport 8880 -m state --state NEW -j iaccept
-A iglobal -p udp -m udp --dport 8464 -m state --state NEW -j iaccept
-A iglobal -p tcp -m tcp --dport 8464 -m state --state NEW -j iaccept
-A iglobal -p tcp -m tcp --dport 390 -m state --state NEW -j drop
-A iglobal -p udp -m udp --dport 123 -m state --state NEW -j iaccept
-A iglobal -p udp -m udp --dport 53 -m state --state NEW -j iaccept
-A iglobal -p tcp -m tcp --dport 53 -m state --state NEW -j iaccept
-A iglobal -p tcp -m tcp --dport 22 -m state --state NEW -j iaccept
-A iglobal -p tcp -m tcp --dport 443 -m state --state NEW -j iaccept
-A inoexternal -i eth0 -m state --state NEW -j idrop
-A inospoof -j inospoofmodules
-A log -j RETURN
-A oaccept -j ACCEPT
-A odrop -j drop
-A oglobal -m state --state NEW -j oaccept
-A ointernal -d 192.168.200.12/32 -p udp -m state --state NEW -m udp --dport 53 -j oaccept
-A ointernal -d 192.168.200.12/32 -p tcp -m state --state NEW -m tcp --dport 53 -j oaccept
-A ointernal -d 192.168.200.3/32 -p udp -m state --state NEW -m udp --dport 53 -j oaccept
-A ointernal -d 192.168.200.3/32 -p tcp -m state --state NEW -m tcp --dport 53 -j oaccept
-A ointernal -d 168.95.192.1/32 -p udp -m state --state NEW -m udp --dport 53 -j oaccept
-A ointernal -d 168.95.192.1/32 -p tcp -m state --state NEW -m tcp --dport 53 -j oaccept
-A ointernal -o eth0 -p udp -m state --state NEW -m udp --dport 67 -j oaccept
-A ointernal -o eth1 -p udp -m state --state NEW -m udp --dport 67 -j oaccept
-A omodules -p udp -m udp --dport 53 -j oaccept
-A omodules -p tcp -m tcp --dport 53 -j oaccept
COMMIT
# Completed on Tue Feb 18 11:19:35 2014
# Generated by iptables-save v1.4.12 on Tue Feb 18 11:19:35 2014
*mangle
:PREROUTING ACCEPT [24741:3767093]
:INPUT ACCEPT [24128:3674596]
:FORWARD ACCEPT [499:86669]
:OUTPUT ACCEPT [23960:5165848]
:POSTROUTING ACCEPT [24452:5252237]
COMMIT
# Completed on Tue Feb 18 11:19:35 2014
# Generated by iptables-save v1.4.12 on Tue Feb 18 11:19:35 2014
*nat
:PREROUTING ACCEPT [167:16052]
:INPUT ACCEPT [100:12344]
:OUTPUT ACCEPT [54:3273]
:POSTROUTING ACCEPT [52:3120]
:postmodules - [0:0]
:premodules - [0:0]
-A PREROUTING -j premodules
-A POSTROUTING -j postmodules
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Tue Feb 18 11:19:35 2014
